--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header-forside">
+        <img class="yellow-header" src="images/Baggrund header.png" alt="yellow-background">
+        <img class="menu" src="images/burgermeny.png" alt="menu">
+        <h1>Rosa Palskov</h1>
+        <h2>Multimediedesigner</h2>
+    </header>
 </body>
 </html>
