Tilføjelse af fokusområder
- tilføjelse af tekst om fokusområder på forside

--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
         <h1>Rosa Palskov</h1>
         <h2>Multimediedesigner</h2>
     </header>
+
+    <section class="fokus">
+        <h3>Fokusområder</h3>
+        <p>Grafisk design<br>Fotografi<br>Tegning<br>Billedredigering</p>
+        <h4>Også erfaring indenfor</h4>
+        <h5>Kodning i HTML & css<br>Marketing<br>Målgruppeanalyse</h5>
+
+    </section>
 </body>
 </html>
