Tilføjelse af footer
- tilføjelse af footer til forside
- beskæring af img "bund-baggrund"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <p>Grafisk design<br>Fotografi<br>Tegning<br>Billedredigering</p>
         <h4>Også erfaring indenfor</h4>
         <h5>Kodning i HTML & css<br>Marketing<br>Målgruppeanalyse</h5>
-
     </section>
+
+    <footer class="forside-footer">
+        <img class="bund" src="images/bund-baggrund.png" alt="blue Background">
+    </footer>
 </body>
 </html>
