--- a/foto.html
+++ b/foto.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="foto-grid">
+
+        <div class="fotos">
+            <h6>De fire elementer</h6>
+            <img src="images/vand.jpg" alt="vand" width="100%">
+            <img src="images/ild.jpg" alt="ild" width="100%">
+            <img src="images/Jord.jpg" alt="Jord" width="100%">
+            <img src="images/luft.jpg" alt="luft" width="100%"> 
+        </div>
+
+        <div class="fotos">
+            <h6>Sakura</h6>
+            <img src="images/sakura2.jpg" alt="Sakura portræt" width="100%">
+            <img src="images/sakura.jpg" alt="Kirsebær træer" width="100%">
+        </div>
+        
+        <div class="fotos">
+            <h6>Lowkey lightning</h6>
+            <img src="images/light.jpg" alt="Lowkey light foto" width="100%">
+        </div>
+
+        <div class="fotos">
+            <h6>Bathtub</h6>
+            <img src="images/bad.jpg" alt="Bubbles" width="100%">
+            <img src="images/bad2.jpg" alt="bathtub" width="100%">
+        </div>
+
+        <div class="fotos">
+            <h6>Black & White</h6>
+            <img src="images/bw.jpg" alt="Portrait" width="100%">
+            <img src="images/kat.jpg" alt="Guy holding cat" width="100%">
+            <img src="images/analog.jpg" alt="Woman on bike" width="100%">
+            <img src="images/smile.jpg" alt="Happy portrait" width="100%">
+        </div>
+
+    </section>
 </body>
 </html>
