Tilføjelse af header
- tilføjelse af header til fotografi side
- gjort burger menu mindre
- ændring af grid margin

--- a/foto.html
+++ b/foto.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header>
+        <img class="menu" src="images/burgermenu-sort.png" alt="Burger menu">
+        <h1>Fotografi</h1>
+    </header>
+
     <section class="foto-grid">
 
         <div class="fotos">
