Tilføjelse af cases
- tilføjelse af billeder på "cases"
- tilføjelse af links
- omdøbning af skærmbillede

--- a/foto.html
+++ b/foto.html
@@ -13,7 +13,7 @@
         <h1>Fotografi</h1>
     </header>
 
-    <section class="foto-grid">
+    <section class="grid">
 
         <div class="fotos">
             <h6>De fire elementer</h6>
