--- a/cases.html
+++ b/cases.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1 class="lys-titel">Cases</h1>
+    </header>
+
+    <main class="grid">
+        <div class="cases">
+            <h6>Young Auto Drivers</h6>
+            <img src="images/yad.png" alt="Young Auto Drivers" width="100%">
+            <a href="yad.html">Læs mere</a>
+        </div>
+
+        <div class="cases">
+            <h6>Spacious</h6>
+            <img src="images/mars.png" alt="Spacious" width="100%">
+            <a href="spacious.html">Læs mere</a>
+        </div>
+
+        <div class="cases">
+            <h6>Bollywood</h6>
+            <img src="images/Bollywood.png" alt="Bollywood Sway" width="100%">
+            <a href="bollywood.html">Læs mere</a>
+        </div>
+    </main>
 </body>
 </html>
