tilføjelse af header
- tilføjet h2 til cases
- styling af header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="yellow-header" src="images/Baggrund header.png" alt="yellow-background">
         <img class="menu" src="images/burgermeny.png" alt="menu">
         <h1>Rosa Palskov</h1>
-        <h2>Multimediedesigner</h2>
+        <h2 class="forside-h2">Multimediedesigner</h2>
     </header>
 
     <section class="fokus">
