Young auto drivers
- tilføjelse af young auto drivers side
- ændret h2 font weight

--- a/cases.html
+++ b/cases.html
@@ -11,7 +11,7 @@
         <img class="yellow-header" src="images/baggrund-corner.png" alt="Colourful background">
         <img class="menu" src="images/burgermeny.png" alt="Burgermenu">
         <h1 class="lys-titel">Cases</h1>
-        <h2>Her ses de cases jeg som studerende <br> haft ind til videre.</h2>
+        <h2 class="lys-tekst">Her ses de cases jeg som studerende <br> haft ind til videre.</h2>
     </header>
 
     <main class="grid">
