--- a/yad.html
+++ b/yad.html
@@ -7,6 +7,58 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img class="menu" src="images/burgermenu-sort.png" alt="burger menu">
+        <h1>Young Auto Drivers</h1>
+        <h2>I denne case skulle vi som gruppe opfinde <br>
+            et nyt bilfirma, og derefter designe og kode <br>
+            hjemmeside i både desktop og mobilformat <br>
+            til firmaet. <br>
+            <br>
+            Vores firma sælger miljøvenlige biler <br>
+            til studerende. <br>
+            Vi har derfor benyttet grøn i vores <br>
+            farve-pallette, for at vise at vi har <br>
+            fokus på naturen. <br>
+            <br>
+            Herunder ses den side jeg stod for at kode. <br>
+            </h2>
+    </header>
     
+    <section class="grid">
+        <div class="koncept">
+            <h6>Desktop format</h6>
+            <img src="images/koncept.jpg" alt="Desktop format" width="100%">
+        </div>
+
+        <div class="koncept">
+            <h6>Mobil format</h6>
+            <img src="images/koncept-mobil.jpg" alt="Mobil format" width="100%">
+            <h2>Vi valgte at lave mobilformat og <br>
+                desktopformat meget ens. <br>
+                Dog er billedet i mobilformat gjort <br>
+                mindre, og sidens overskrift har fået <br>
+                grå baggrund. <br>
+                Dette er gjort for ikke at være for <br>
+                mange distraherende elementer på <br>
+                en mindre skærm. <br>
+                <br>
+                Derudover er navigationen i header, <br>
+                skiftet ud med en burgermenu, da <br>
+                det er mere mobilvenligt.</h2>
+        </div>
+        
+        <section class="boks">
+            <h6>Sociale medier posts</h6>
+            <img src="images/facebook.jpg" alt="Facebook post" width="90%">
+            <img src="images/instagram.jpg" alt="Instagram post" width="90%">
+            <h2>Vi lavede i gruppen en content plan, og I <br>
+                den sammenhæng lavede jeg disse falske <br>
+                opslag til Facebook og Instagram. <br>
+                Begge opslag er lavet i photoshop.</h2>
+        </section>
+
+
+    </section>
 </body>
 </html>
