--- a/fritidsprojekter.html
+++ b/fritidsprojekter.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     
+    <header>
+        <img class="menu" src="images/burgermenu-sort.png" alt="Burger menu">
+        <h1>Fritidsprojekter</h1>
+    </header>
+
+    <section class="grid">
+        <div class="fritid">
+            <h6>Tegning</h6>
+        </div>
+
+        <div class="fritid">
+            <h6>Maling</h6>
+        </div>
+
+        <div class="fritid">
+            <h6>Photoshop projekter</h6>
+            <img src="images/neon.jpg" alt="Neon design" width="100%">
+            <img src="images/faceless.jpg" alt="ansigtsløs" width="100%">
+        </div>
+
+    </section>
+
 </body>
 </html>
