--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 <body>
     <header class="header-forside">
         <img class="yellow-header" src="images/Baggrund header.png" alt="yellow-background">
-        <img class="menu" src="images/burgermeny.png" alt="menu">
         <h1>Rosa Palskov</h1>
         <h2 class="forside-h2">Multimediedesigner</h2>
+        <div class="dropdown">
+            <img class="menu" src="images/burgermeny.png" alt="menu">
+            <div class="dropdown-content">
+              <a href="index.html">Forside</a>
+              <a href="cases.html">Cases</a>
+              <a href="foto.html">Fotografi</a>
+              <a href="om-mig.html">Om mig</a>
+              <a href="fritidsprojekter.html">Fritids projekter</a>
+            </div>
+          </div>
+        
     </header>
 
     <section class="fokus">
