--- a/cases.html
+++ b/cases.html
@@ -9,7 +9,16 @@
 <body>
     <header>
         <img class="yellow-header" src="images/baggrund-corner.png" alt="Colourful background">
-        <img class="menu" src="images/burgermeny.png" alt="Burgermenu">
+        <div class="dropdown">
+            <img class="menu" src="images/burgermeny.png" alt="menu">
+                <div class="dropdown-content">
+                <a href="index.html">Forside</a>
+                <a href="cases.html">Cases</a>
+                <a href="foto.html">Fotografi</a>
+                <a href="om-mig.html">Om mig</a>
+                <a href="fritidsprojekter.html">Fritids projekter</a>
+                </div>
+          </div>
         <h1 class="lys-titel">Cases</h1>
         <h2 class="lys-tekst">Her ses de cases jeg som studerende <br> haft ind til videre.</h2>
     </header>
