--- a/fritidsprojekter.html
+++ b/fritidsprojekter.html
@@ -9,8 +9,17 @@
 <body>
     
     <header>
-        <img class="menu" src="images/burgermenu-sort.png" alt="Burger menu">
         <h1>Fritidsprojekter</h1>
+        <div class="dropdown">
+            <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+                <div class="dropdown-content">
+                <a href="index.html">Forside</a>
+                <a href="cases.html">Cases</a>
+                <a href="foto.html">Fotografi</a>
+                <a href="om-mig.html">Om mig</a>
+                <a href="fritidsprojekter.html">Fritids projekter</a>
+                </div>
+          </div>
     </header>
 
     <section class="grid">
