--- a/om-mig.html
+++ b/om-mig.html
@@ -10,7 +10,16 @@
     <header>
         <img class="blue-header" src="images/blue-corner.png" alt="Colourful background" width="50%">
         <h1 class="om-h1">Om mig</h1>
-        <img class="menu" src="images/burgermenu-sort.png" alt="Burger menu">
+        <div class="dropdown">
+            <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+                <div class="dropdown-content">
+                <a href="index.html">Forside</a>
+                <a href="cases.html">Cases</a>
+                <a href="foto.html">Fotografi</a>
+                <a href="om-mig.html">Om mig</a>
+                <a href="fritidsprojekter.html">Fritids projekter</a>
+                </div>
+          </div>
     </header>
 
     <section class="grid">
