--- a/yad.html
+++ b/yad.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
-        <img class="menu" src="images/burgermenu-sort.png" alt="burger menu">
+        <div class="dropdown">
+            <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+                <div class="dropdown-content">
+                <a href="index.html">Forside</a>
+                <a href="cases.html">Cases</a>
+                <a href="foto.html">Fotografi</a>
+                <a href="om-mig.html">Om mig</a>
+                <a href="fritidsprojekter.html">Fritids projekter</a>
+                </div>
+          </div>
         <h1>Young Auto Drivers</h1>
         <h2>I denne case skulle vi som gruppe opfinde <br>
             et nyt bilfirma, og derefter designe og kode <br>
