Ballet by Birgitte
- tilføjelse af Ballet by Birgitte
- beskæring af baggrunds billede
- tilføjelse af skærmbillede til Ballet by Birgitte case

--- a/bbb.html
+++ b/bbb.html
@@ -6,7 +6,29 @@
     <title>Ballet by Birgitte</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
-    
+    <header>
+        <div class="dropdown">
+        <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+            <div class="dropdown-content">
+            <a href="index.html">Forside</a>
+            <a href="cases.html">Cases</a>
+            <a href="foto.html">Fotografi</a>
+            <a href="om-mig.html">Om mig</a>
+            <a href="fritidsprojekter.html">Fritids projekter</a>
+            </div>
+            <h1>Ballet by Birgitte</h1>
+      </div>
+    </header>
+
+    <section class="grid">
+        <div class="bbb">
+            <h6>Mobil format</h6>
+            <img src="images/bbb.jpg" alt="skærmbillede" width="100%">
+        </div>
+    </section>
+
 </body>
 </html>
