--- a/cases.html
+++ b/cases.html
@@ -37,6 +37,12 @@
         </div>
 
         <div class="cases">
+            <h6>Ballet by Birgitte</h6>
+            <img src="images/bbb2.png" alt="Ballet by Birgitte" width="100%">
+            <a href="bbb.html">Læs mere</a>
+        </div>
+
+        <div class="cases">
             <h6>Bollywood</h6>
             <img src="images/Bollywood.png" alt="Bollywood Sway" width="100%">
             <a href="bollywood.html">Læs mere</a>
