--- a/bollywood.html
+++ b/bollywood.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     
+
+    <div class="footer">
+        <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
+    </div>
 </body>
 </html>
