--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <footer class="forside-footer">
         <img class="bund" src="images/bund-baggrund.png" alt="blue Background">
+        <div class="footer">
+            <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
+        </div>
     </footer>
 </body>
 </html>
