--- a/cases.html
+++ b/cases.html
@@ -48,5 +48,9 @@
             <a href="bollywood.html">Læs mere</a>
         </div>
     </main>
+
+    <div class="footer">
+        <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
+    </div>
 </body>
 </html>
