--- a/foto.html
+++ b/foto.html
@@ -59,5 +59,9 @@
         </div>
 
     </section>
+
+    <div class="footer">
+        <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
+    </div>
 </body>
 </html>
