--- a/fritidsprojekter.html
+++ b/fritidsprojekter.html
@@ -39,5 +39,8 @@
 
     </section>
 
+    <div class="footer">
+        <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
+    </div>
 </body>
 </html>
