--- a/spacious.html
+++ b/spacious.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     
+    <div class="footer">
+        <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
+    </div>
 </body>
 </html>
