--- a/bollywood.html
+++ b/bollywood.html
@@ -7,7 +7,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Bollywood Sway</h1>
+
+        <div class="dropdown">
+            <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+
+            <div class="dropdown-content">
+                <a href="index.html">Forside</a>
+                <a href="cases.html">Cases</a>
+                <a href="foto.html">Fotografi</a>
+                <a href="om-mig.html">Om mig</a>
+                <a href="fritidsprojekter.html">Fritids projekter</a>
+            </div>
+
+        </div>
+          
+          <h2>I denne case skulle vi udarbejde et website til en <br>
+                Bollywood danseskole. <br>
+                Vi valgte at have fokus på sjov, fællesskab <br>
+                og motion, og har derfor et farverigt og <br>
+                moderne design. <br>
+                <br>
+                I denne case brugte vi for første gang media <br>
+                queries for at tilpasse for website til <br>
+                forskellige formater. <br>
+            </h2>
+
+    </header>
+
+    <section class="grid">
+        <div class="bollywood">
+            <h6>Desktop format</h6>
+            <img src="images/kalender.jpg" alt="kalender" width="100%">
+            <h2>Jeg var ansvarlig for at kode vores <br>
+                program underside, hvor vi valgte at have <br>
+                en kalender, med overblik over de forskellige hold.</h2>  
+        </div>
+
+        <div class="bollywood">
+            <h6>Mobil format</h6>
+            <img src="images/bollywood-mobil.jpg" alt="Kalender i mobil format" width="100%">
+            <h2>Den største udfordring var at bruge <br>
+                media queries for første gang. <br>
+                Kalenderens datoer skulle ligge på linje ved de <br>
+                rette ugedage, både i desktop og mobil format, <br>
+                hvilket heldigvis lykkedes til sidst.</h2>
+        </div>
+    </section>
 
     <div class="footer">
         <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
