--- a/spacious.html
+++ b/spacious.html
@@ -7,7 +7,77 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+    <h1>Spacious</h1>
+
+    <div class="dropdown">
+        <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+        <div class="dropdown-content">
+            <a href="index.html">Forside</a>
+            <a href="cases.html">Cases</a>
+            <a href="foto.html">Fotografi</a>
+            <a href="om-mig.html">Om mig</a>
+            <a href="fritidsprojekter.html">Fritids projekter</a>
+        </div>
+    </div>
+      
+      <h2>Dette var vores første case. <br>
+        Vores opgave var at udarbejde et koncept <br>
+        og en hjemmeside, ud fra temaet <br>
+        "rumrejse". <br>
+        Vores koncept endte med at minde om <br>
+        et krydstogt - bare i rummet. <br>
+        Hver planet i solsystemet fik ud fra astrologi <br>
+        forskellige temaer.
+        </h2>
+    </header>
+
+    <section class="grid">
+
+        <div class="space">
+            <h6>Desktop format</h6>
+            <img src="images/mars.png" alt="Mars website" width="100%">
+            <h2>Jeg stod for at kode siden til mars. <br>
+                Vi valgte at gøre mars til et sted med mulighed <br>
+                for fest og gambling. <br>
+                Dette blev besluttet ud fra astrologi, hvor mars <br>
+                repræsenterer lyst og ambition. <br>
+                Vores farve pallette er inspireret af <br>
+                planetens farver. </h2>
+        </div>
+
+        <section class="boks">
+            <h6>Billedredigering</h6>
+
+            <div class="space">
+            <img src="images/spacestation.jpg" alt="Space station" width="90%">
+            </div>
+
+            <div class="space">
+                <img src="images/galaxy.jpg" alt="Galaxy" width="90%">
+            </div>
+
+            <div class="space">
+                <h2>Et af vores produktkrav, var at <br>
+                    inddrage et billede med blikfang. <br>
+                    Vi kunne godt lide rumstationen, men var ikke <br>
+                    glade for baggrunden, da den ikke var <br>
+                    farverig nok. Jeg redigerede derfor <br>
+                    rumstationen ind på en anden baggrund. <br>
+                    Farverne passede i forvejen godt sammen, <br>
+                    så der skulle kun småjusteres på belysning <br>
+                    og farvebalance. </h2>
+            </div>
+
+            <div class="space">
+                <img src="images/rumstation.jpg" alt="Space station" width="90%">
+                <h2>Jeg placerede rumstationen ved det gyldne snit, <br>
+                    for at skabe blikfang.</h2>
+            </div>
+        </section>
+
+    </section>
+
     <div class="footer">
         <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
     </div>
