ballet by birgitte
- tilføjet tekst til ballet by birgitte
- indsat images til fritidsprojekter
- ændret rækkefølge af div på fritidsinteresser

--- a/bbb.html
+++ b/bbb.html
@@ -21,12 +21,25 @@
             </div>
             <h1>Ballet by Birgitte</h1>
       </div>
+
+      <h2>I denne case overtog vi et koncept <br>
+        og website fra en anden gruppe. <br>
+        Vi skulle videreudvikle deres arbejde, <br>
+        som var en ballet danseskole  primært til børn <br>
+        <br>
+        Vi valgte at tilføje en shop til siden, <br>
+        hvilket jeg stod for at kode.</h2>
+
     </header>
 
     <section class="grid">
         <div class="bbb">
             <h6>Mobil format</h6>
             <img src="images/bbb.jpg" alt="skærmbillede" width="100%">
+            <h2>Dette var en af de første gange vi <br>
+                benyttede grids til at kode. <br>
+                Den største udfordring var derfor <br>
+                at anvende grids.</h2>
         </div>
     </section>
 
