--- a/fritidsprojekter.html
+++ b/fritidsprojekter.html
@@ -25,10 +25,7 @@
     <section class="grid">
         <div class="fritid">
             <h6>Tegning</h6>
-        </div>
-
-        <div class="fritid">
-            <h6>Maling</h6>
+            <img src="images/manga.jpg" alt="Manga drawing" width="100%">
         </div>
 
         <div class="fritid">
@@ -36,6 +33,13 @@
             <img src="images/neon.jpg" alt="Neon design" width="100%">
             <img src="images/faceless.jpg" alt="ansigtsløs" width="100%">
         </div>
+
+        <div class="fritid">
+            <h6>Maling</h6>
+            <img src="images/pour.jpg" alt="Acrylic pour" width="100%">
+        </div>
+
+        
 
     </section>
 
