--- a/bollywood.html
+++ b/bollywood.html
@@ -11,17 +11,15 @@
         <h1>Bollywood Sway</h1>
 
         <div class="dropdown">
-            <img class="menu" src="images/burgermenu-sort.png" alt="menu">
-
-            <div class="dropdown-content">
+            <img class="menu" onclick="MyFunction()" src="images/burgermenu-sort.png" alt="menu">
+                <div class="dropdown-content">
                 <a href="index.html">Forside</a>
                 <a href="cases.html">Cases</a>
                 <a href="foto.html">Fotografi</a>
                 <a href="om-mig.html">Om mig</a>
                 <a href="fritidsprojekter.html">Fritids projekter</a>
-            </div>
-
-        </div>
+                </div>
+          </div>
           
           <h2>I denne case skulle vi udarbejde et website til en <br>
                 Bollywood danseskole. <br>
@@ -59,5 +57,17 @@
     <div class="footer">
         <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+               document.querySelector(".dropdown").addEventListener('click', function(event) {
+                   if (document.querySelector(".dropdown").classList.contains("show")) {
+                       document.querySelector(".dropdown").classList.remove("show");
+                   } else {
+                       document.querySelector(".dropdown").classList.add("show");
+                   }
+               });
+           });
+       </script>
 </body>
 </html>
