--- a/yad.html
+++ b/yad.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="dropdown">
-            <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+            <img class="menu" onclick="MyFunction()" src="images/burgermenu-sort.png" alt="menu">
                 <div class="dropdown-content">
                 <a href="index.html">Forside</a>
                 <a href="cases.html">Cases</a>
@@ -73,5 +73,17 @@
     <div class="footer">
         <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+               document.querySelector(".dropdown").addEventListener('click', function(event) {
+                   if (document.querySelector(".dropdown").classList.contains("show")) {
+                       document.querySelector(".dropdown").classList.remove("show");
+                   } else {
+                       document.querySelector(".dropdown").classList.add("show");
+                   }
+               });
+           });
+       </script>
 </body>
 </html>
