--- a/cases.html
+++ b/cases.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="yellow-header2" src="images/baggrund-corner.png" alt="Colourful background" width="50%">
+        <img class="yellow-header2" src="images/baggrund-corner.png" alt="Colourful background">
         <div class="dropdown">
             <img class="menu" onclick="MyFunction()" src="images/burgermenu-sort.png" alt="menu">
                 <div class="dropdown-content">
