--- a/om-mig.html
+++ b/om-mig.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <img class="blue-header" src="images/blue-corner.png" alt="Colourful background" width="110%">
-        <h1 class="om-h1">Om mig</h1>
+        <h1 class="lys-titel">Om mig</h1>
         <div class="dropdown">
-            <img class="menu" src="images/burgermenu-sort.png" alt="menu">
+            <img class="menu" onclick="MyFunction()" src="images/burgermenu-sort.png" alt="menu">
                 <div class="dropdown-content">
                 <a href="index.html">Forside</a>
                 <a href="cases.html">Cases</a>
@@ -21,7 +21,7 @@
                 </div>
           </div>
           <div class="mig">
-            <img src="images/mig.png" alt="Portræt" width="90%">
+            <img class="mig2" src="images/mig.png" alt="Portræt">
         </div>
     </header>
 
@@ -47,5 +47,18 @@
     <div class="footer">
         <p>Rosa Palskov<br>©Copyright 2020<br>Mail: rosa0426@edu.easj.dk</p>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+               document.querySelector(".dropdown").addEventListener('click', function(event) {
+                   if (document.querySelector(".dropdown").classList.contains("show")) {
+                       document.querySelector(".dropdown").classList.remove("show");
+                   } else {
+                       document.querySelector(".dropdown").classList.add("show");
+                   }
+               });
+           });
+       </script>
+
 </body>
 </html>
